css/style.css
/* ... */
h2.text-l {color: var(--darkgrey); font-weight: bold; padding-bottom: 8px; letter-spacing: -1px;}
h2 a {color: var(--darkgrey); text-decoration: none;}
h2 a:hover {color: var(--nearwhite);}

h4, time {font-weight: bold;}
time {display: block;}

.text-jumbo, .text-xl {
	color: var(--almostblack);
	z-index: 2;
	-webkit-text-stroke: 1px var(--almostblack);
	font-weight: bold;
}

.text-jumbo+.text-jumbo, .text-xl+.text-xl {
	-webkit-text-stroke: 3px var(--darkgrey);
	position: absolute;
	top: 0;
	left: 0;
	z-index: 1;
}

@media (min-width: 700px) {
	.text-jumbo+.text-jumbo, .text-xl+.text-xl {-webkit-text-stroke: 4px var(--darkgrey);}
} /* JUMBO STYLE */


/* END OF TYPE STYLES */

/* FONT SIZES */
.text-s {font-size:13px;}
.text-m {font-size: 16px;}
.text-l {font-size: 20px;}
.text-xl {font-size: 31px;}
.text-jumbo {font-size:31px;}
/* MOBILE FONT SIZES */

@media (min-width: 700px) {
	.text-l {font-size: 30px;}
	.text-xl {font-size: 61px;}
	.text-jumbo {font-size:61px;}
} /* TABLET FONT SIZES */


@media (min-width: 1080px) {
	.text-l {font-size: 34px;}
	.text-xl {font-size: 76px;}
	.text-jumbo {font-size:89px;}
} /* DESKTOP FONT SIZES */

/* END OF FONT-SIZES */

/* LIST STYLES */

ul {
	display: flex;
	list-style-type: none;
	justify-content: space-between;
	flex-wrap: wrap;
}

li {
	border-bottom: 1px solid var(--darkgrey);
	line-height: 24px; 
	padding: 11px 0 11px 0; 
	width: calc(50% - 6.5px); 
}
li.no-border {border-bottom: 0; padding-bottom: 0;}
li:last-child {border: none; padding-bottom: 0;}

/* -- ACCORDION STYLES -- NOT USED
span.accordion {
	transition: 250ms; 
	display: block; 
	padding: 11px 0px;
}

span.accordion:hover, span.accordion.active {
	cursor: pointer; 
	background: var(--nearwhite);
	color: var(--almostblack);
	padding: 11px 16px;
}

span.accordion:before {
	content: 'Our Take';
	position: absolute;
	right: 16px;
	text-decoration: underline;
	color: var(--almostblack);
	transition: 250ms;
	font-size: 13px;
}

span.accordion:after {
	content: '↓';
	position: absolute;
	right: 0px;
	margin-top: -2px;
	color:var(--almostblack);
	transition: 250ms;
}

span.accordion:hover:before {
	right: 32px;
}

span.accordion:hover:after {
	right:16px;
}

span.accordion.active:after {
	transform: rotate(-180deg);
	margin-top: 2px;
	right:16px;
}

span.accordion.active:before {right:32px;}

div.panel {
	background-color: var(--nearwhite);
	color: var(--almostblack);
	overflow: hidden;
	top: -1px;
	max-height: 0;
	transition: max-height 200ms ease-out;
}

div.panel p {padding: 0px 16px 11px 16px !important;}
div.panel p a {color: var(--almostblack); text-decoration: underline !important;}
div.panel p a:hover {text-decoration: none !important;}

END OF ACCORDION STYLES -- NOT USED */


@media (min-width: 700px) {
	li { width: calc(50% - 10px);}
} /* TABLET LIST PADDING */

@media (min-width: 1080px) {
	li {padding: 11px 0; width: calc(50% - 12.5px);}
} /* DESKTOP LIST PADDING */

/* END OF LIST STYLES */


/* TABLE STYLES */
table {text-align: left; height: fit-content; line-height: 24px;  }
tr {border-bottom: 1px solid var(--darkgrey); display: block;}
th {font-weight: bold; display: block;}
td {padding:5px 0 11px 0; display: block;}
tr:last-child {border-bottom: 0;}
tr:first-child th:first-child {padding: 0;}
th { padding-top: 11px;}

@media (min-width: 700px) {
	tr {display: table-row;}
	td, {padding: 11px 0;}
	th, tr:first-child th:first-child {display: table-cell; padding:11px 16px 11px 0; }
} /* TABLE TABLET / DESKTOP PADDING */

/* END OF TABLE STYLES */

/* GRID SYSTEM */

/*. MOBILE GRID -- NOT USED
container {
		display: grid;
		grid-template-columns: repeat(6,minmax(0,1fr));
		column-gap:16px;
	}  
MOBILE GRID -- NOT USED */
	
@media (min-width: 700px) {
	.container {
		display:grid;
		grid-template-columns: repeat(8,minmax(0,1fr));
		column-gap:20px;
		margin: 0 auto;	
	}
	.tablet-col-2 {grid-column: 2 / span 2;}
	.tablet-col-2-mid {grid-column: 4 / span 2;}
	.tablet-col-3-end {grid-column: 6 / span 3;}
	.tablet-col-3 {grid-column: 2 / span 3;}
	.tablet-col-4 {grid-column: 1 / span 4;}
	.tablet-col-4+.tablet-col-4 {grid-column: 5 / span 4;}
	.tablet-col-6 {grid-column: 3 / span 6;}
} /* TABLET GRID */

@media (min-width: 1080px) {
	.container {
		grid-template-columns: repeat(12,minmax(0,1fr));
		column-gap:25px;
		max-width: 1187px;
		margin: 0 auto;	
	}	
	.desktop-col-3 {grid-column: 3 / span 3;}
	.desktop-col-4 {grid-column: 1 / span 4;}
	.desktop-col-3-mid {grid-column: 6 / span 3;}
	.desktop-col-3-end {grid-column: 10 / span 3;}
	.desktop-col-5 {grid-column: 8 / span 5;}
	.desktop-col-6 {grid-column: 1 / span 6;}
	.desktop-col-6+.desktop-col-6 {grid-column: 7 / span 6;}
	.desktop-col-6 img {width:100%;}
	.desktop-col-7 {grid-column: 3 / span 7;}
	.desktop-col-7-left {grid-column: 1 / span 7;}
	.desktop-col-8 {grid-column: 5 / span 8;}
	.desktop-col-10 {grid-column: 3 / span 10;}
	
	.desktop-col-7-left + .desktop-col-5 {grid-column: 8 / span 5;}
	
	.desktop-col-7-left+.desktop-col-6 {grid-column: 1 / span 6;} 
	
} /* DESKTOP GRID */

/* END OF GRID SYSTEM */

/* END GLOBAL STYLES & VARIABLES */


/* COMBINED FOOTER & HEADER STYLES */

header h4, footer h4 {margin-bottom:12px;}
header p, footer p {line-height: 17px;}
header .contacts a, footer .contacts a  {text-decoration: none;}
header .contacts a:hover, footer .contacts a:hover  {text-decoration: underline;}

header img, footer img {width: 62px;}
 /*header img {background: lime; border-radius: 100%;}
UPDATED 4/17/23 
*/

@media (min-width: 810px) {
	header img, footer img {width: 76px;}
} /* DON'T USE 810PX AS A BREAKPOINT THE TABLET BREAKPOINT SHOULD BE 700PX THIS IS A HACK FOR THE LOGO */

@media (min-width: 1080px) {
	header img, footer img {width: 95px;}
}

/* END OF COMBINED FOOTER & HEADER STYLES */


/* HEADER STYLES */
header {
	position: absolute; 
	top:0; 
	left:0;
	z-index:2;
	padding-top:25px;
	display: flex;
	align-items: flex-start;
}
header.internal {position: relative;}
/* ... */

